Issue #20035: Reimplement tkinter._fix module as a C function.

The new private C function makes no permanent changes to the environment
and is #ifdef'd out on non-Windows platforms.